feat: Enhance PWA and internationalization support
Adds service worker registration for PWA functionality.
Introduces language selection in the navbar with initial support for English, Arabic, French, and Spanish.
Updates meta tags and title in index.html for broader appeal.
Refactors styles in custom.css for better organization and adds new CSS variables.
Improves accessibility and semantics in various components and pages.
Updates hero section styling and adds internationalization key for footer description.

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 
 {
-  "name": "Enterprise AI-Aligned Technical Governance Framework",
+  "name": "Technical Governance Framework",
   "short_name": "EATGF",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#F8F9FF",
   "theme_color": "#4361EE",
-  "description": "Enterprise documentation and support platform.",
+  "description": "Documentation and support platform for enterprises, startups, and developers.",
   "icons": [
     {
       "src": "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/google-cloud.png",
