feat: Rename Nexus to EATGF and update branding
Updates the application name from "Nexus" to "Enterprise AI-Aligned Technical Governance Framework (EATGF)" across the codebase. This includes changes to the manifest file, documentation content, and feedback messages to reflect the new branding.

Additionally, a new section for "SaaS & PaaS Architectural Patterns" has been added to the Home page, and an icon for `CloudLightning` has been imported. The `Nexus-CDN-Cache-Control` header has also been updated to `EATGF-CDN-Cache-Control`.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,5 @@
-
 {
-  "name": "Technical Governance Framework",
+  "name": "Enterprise AI-Aligned Technical Governance Framework",
   "short_name": "EATGF",
   "start_url": "/",
   "display": "standalone",
